@@ -1,3 +1,4 @@
+- added merge_with() and join_with()
 - added @once and @once_per()
 - added is_set()
 - optimized @decorator
